--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-ionicons": "^4.2.1",
     "react-photo-view": "^1.2.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.10.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
